--- a/apply.css
+++ b/apply.css
@@ -94,7 +94,7 @@ img{
 			font-family: 'Orbitron', sans-serif;
 			margin: 0;
 			padding: 0;
-			background-image: url(images/TechBackground.png);
+			background-image: url(TechBackground.png);
 			
 		   
 			
