--- a/subscribe.css
+++ b/subscribe.css
@@ -6,7 +6,7 @@
 }
 body{
   text-align: center;
- background-image: url('images/doge.jpg');
+ background-image: url('doge.jpg');
   background-position: top;
  
   background-repeat: no-repeat;
