--- a/about.css
+++ b/about.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(TechBackground.png);
+    background-image: url('TechBackground.png');
     
    
     
